test/MC/SVE/regression-tests/negative_tests/sve-add-018.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU64AddVIX
// Immediate not compatible with encode/decode function.
add z17.d, z17.d, #511
// CHECK: error: immediate must be an integer in range [0, 255] or a multiple of 256 in range [256, 65280]
